[gd_scene load_steps=2 format=3 uid="uid://dsbnixeflcqyu"]

[ext_resource type="Script" uid="uid://c2gt576hatvks" path="res://scripts/settings.gd" id="1_5p8wc"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5p8wc")

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 128.0
offset_right = 768.0
offset_bottom = 512.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Choose difficulty"

[node name="HSlider" type="HSlider" parent="Container/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 3.0
value = 1.0
tick_count = 3

[node name="CloseButton" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="value_changed" from="Container/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Container/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
